saida/clang.output
Terminals unused in grammar

    EMPTY
    IN
    IS_FLOAT
    IS_INT
    IS_SET
    OP_OU


Grammar

    0 $accept: programa $end

    1 programa: declaracao
    2         | programa declaracao

    3 lista_identificadores: TOKEN_ID
    4                      | lista_identificadores VIRGULA TOKEN_ID

    5 declaracao_parametro: def_declaracao_tipo def_declaracao
    6                     | def_declaracao_tipo

    7 lista_tipo_parametro: declaracao_parametro
    8                     | lista_tipo_parametro VIRGULA declaracao_parametro

    9 def_declaracao: TOKEN_ID
   10               | def_declaracao PARENTESE_E PARENTESE_D
   11               | def_declaracao PARENTESE_E lista_tipo_parametro PARENTESE_D
   12               | def_declaracao PARENTESE_E lista_identificadores PARENTESE_D

   13 def_declaracao_tipo: TIPO_INT
   14                    | TIPO_FLOAT
   15                    | TIPO_ELEM
   16                    | TIPO_SET

   17 declaracao_func: declaracao_parametro expressao_composta

   18 declaracao: declaracao_func
   19           | declaracao_var

   20 inicializar_atrib: def_declaracao
   21                  | def_declaracao ATRIBUICAO expressao_atribuicao

   22 lista_inicializar_atrib: inicializar_atrib
   23                        | lista_inicializar_atrib VIRGULA inicializar_atrib

   24 declaracao_var: def_declaracao_tipo PONTO_E_VIRGULA
   25               | def_declaracao_tipo lista_inicializar_atrib PONTO_E_VIRGULA

   26 item_bloco: declaracao_var
   27           | tipos_expressao

   28 lista_itens_bloco: item_bloco
   29                  | lista_itens_bloco item_bloco

   30 expressao: expressao_atribuicao
   31          | expressao VIRGULA expressao_atribuicao

   32 expressao_declaracao: PONTO_E_VIRGULA
   33                     | expressao PONTO_E_VIRGULA

   34 tipos_expressao: expressao_declaracao
   35                | expressao_decisao
   36                | expressao_composta
   37                | expressao_return
   38                | expressao_iteracao

   39 valores: TOKEN_INTEIRO
   40        | TOKEN_PONTO_FLUTUANTE
   41        | TOKEN_EMPTY

   42 expressao_principal: TOKEN_ID
   43                    | valores
   44                    | ASPAS_SIMPLES TOKEN_ID ASPAS_SIMPLES
   45                    | ASPAS_DUPLAS TOKEN_ID ASPAS_DUPLAS
   46                    | PARENTESE_E expressao PARENTESE_D

   47 expressao_atribuicao: expressao_relacional
   48                     | expressao_chamada ATRIBUICAO expressao_atribuicao

   49 expressao_relacional: expressao_logica
   50                     | expressao_logica OP_MAIOR_QUE expressao_relacional
   51                     | expressao_logica OP_IGUALDADE expressao_relacional

   52 expressao_logica: expressao_aritmetica
   53                 | expressao_aritmetica OP_E expressao_logica
   54                 | expressao_aritmetica OP_NEGACAO expressao_logica
   55                 | expressao_aritmetica OP_COMPARACAO expressao_logica

   56 expressao_aritmetica: expressao_conjunto
   57                     | expressao_conjunto OP_SOMA expressao_aritmetica
   58                     | expressao_conjunto OP_SUBTRACAO expressao_aritmetica
   59                     | expressao_conjunto OP_DIVISAO expressao_aritmetica
   60                     | expressao_conjunto OP_MULTIPLICACAO expressao_aritmetica

   61 expressao_conjunto: expressao_io
   62                   | CONJUNTO_ADD PARENTESE_E expressao_conjunto CONJUNTO_IN expressao_conjunto PARENTESE_D
   63                   | CONJUNTO_REMOVE PARENTESE_E expressao_conjunto CONJUNTO_IN expressao_conjunto PARENTESE_D
   64                   | CONJUNTO_EXISTS PARENTESE_E expressao_conjunto CONJUNTO_IN expressao_conjunto PARENTESE_D

   65 expressao_io: expressao_chamada
   66             | COMANDO_WRITELN PARENTESE_E expressao_io PARENTESE_D
   67             | COMANDO_WRITE PARENTESE_E expressao_io PARENTESE_D
   68             | COMANDO_READ PARENTESE_E expressao_io PARENTESE_D

   69 expressao_chamada: expressao_principal
   70                  | expressao_principal PARENTESE_E PARENTESE_D
   71                  | expressao_principal PARENTESE_E expressao_lista_param PARENTESE_D

   72 expressao_lista_param: expressao_atribuicao
   73                      | expressao_lista_param VIRGULA expressao_atribuicao

   74 expressao_decisao: COMANDO_IF PARENTESE_E expressao PARENTESE_D tipos_expressao COMANDO_ELSE tipos_expressao
   75                  | COMANDO_IF PARENTESE_E expressao PARENTESE_D tipos_expressao
   76                  | COMANDO_IF PARENTESE_E expressao_atribuicao CONJUNTO_IN expressao_atribuicao PARENTESE_D tipos_expressao COMANDO_ELSE tipos_expressao
   77                  | COMANDO_IF PARENTESE_E expressao_atribuicao CONJUNTO_IN expressao_atribuicao PARENTESE_D tipos_expressao

   78 expressao_iteracao: COMANDO_FOR PARENTESE_E declaracao tipos_expressao tipos_expressao PARENTESE_D tipos_expressao
   79                   | COMANDO_FOR PARENTESE_E expressao_atribuicao CONJUNTO_IN expressao_atribuicao PARENTESE_D tipos_expressao
   80                   | COMANDO_FORALL PARENTESE_E expressao_atribuicao CONJUNTO_IN expressao_atribuicao PARENTESE_D tipos_expressao

   81 expressao_composta: CHAVE_E CHAVE_D
   82                   | CHAVE_E lista_itens_bloco CHAVE_D

   83 expressao_return: RETURN PONTO_E_VIRGULA
   84                 | RETURN expressao PONTO_E_VIRGULA


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TOKEN_INTEIRO <valor> (258) 39
    TOKEN_EMPTY <valor> (259) 41
    TOKEN_PONTO_FLUTUANTE <valor> (260) 40
    OP_IGUALDADE <valor> (261) 51
    OP_MAIOR_QUE <valor> (262) 50
    OP_SOMA <valor> (263) 57
    OP_SUBTRACAO <valor> (264) 58
    CONJUNTO_ADD <valor> (265) 62
    CONJUNTO_REMOVE <valor> (266) 63
    CONJUNTO_EXISTS <valor> (267) 64
    TOKEN_ID <simbolo> (268) 3 4 9 42 44 45
    ATRIBUICAO (269) 21 48
    ASPAS_SIMPLES (270) 44
    ASPAS_DUPLAS (271) 45
    CHAVE_E (272) 81 82
    CHAVE_D (273) 81 82
    COMANDO_FOR (274) 78 79
    COMANDO_FORALL (275) 80
    COMANDO_READ (276) 68
    COMANDO_WRITE (277) 67
    COMANDO_WRITELN (278) 66
    CONJUNTO_IN (279) 62 63 64 76 77 79 80
    TIPO_ELEM (280) 15
    COMANDO_ELSE (281) 74 76
    EMPTY (282)
    COMANDO_IF (283) 74 75 76 77
    IN (284)
    IS_FLOAT (285)
    IS_INT (286)
    IS_SET (287)
    OP_COMPARACAO (288) 55
    OP_DIVISAO (289) 59
    OP_E (290) 53
    OP_MULTIPLICACAO (291) 60
    OP_NEGACAO (292) 54
    OP_OU (293)
    PARENTESE_E (294) 10 11 12 46 62 63 64 66 67 68 70 71 74 75 76 77 78 79 80
    PARENTESE_D (295) 10 11 12 46 62 63 64 66 67 68 70 71 74 75 76 77 78 79 80
    PONTO_E_VIRGULA (296) 24 25 32 33 83 84
    RETURN (297) 83 84
    TIPO_SET (298) 16
    TIPO_INT (299) 13
    TIPO_FLOAT (300) 14
    VIRGULA (301) 4 8 23 31 73
    THEN (302)


Nonterminals, with rules where they appear

    $accept (48)
        on left: 0
    programa <no> (49)
        on left: 1 2
        on right: 0 2
    lista_identificadores (50)
        on left: 3 4
        on right: 4 12
    declaracao_parametro <simbolo> (51)
        on left: 5 6
        on right: 7 8 17
    lista_tipo_parametro <no> (52)
        on left: 7 8
        on right: 8 11
    def_declaracao <simbolo> (53)
        on left: 9 10 11 12
        on right: 5 10 11 12 20 21
    def_declaracao_tipo <tipo_dado> (54)
        on left: 13 14 15 16
        on right: 5 6 24 25
    declaracao_func <no> (55)
        on left: 17
        on right: 18
    declaracao <no> (56)
        on left: 18 19
        on right: 1 2 78
    inicializar_atrib <simbolo> (57)
        on left: 20 21
        on right: 22 23
    lista_inicializar_atrib (58)
        on left: 22 23
        on right: 23 25
    declaracao_var <no> (59)
        on left: 24 25
        on right: 19 26
    item_bloco <no> (60)
        on left: 26 27
        on right: 28 29
    lista_itens_bloco <no> (61)
        on left: 28 29
        on right: 29 82
    expressao <no> (62)
        on left: 30 31
        on right: 31 33 46 74 75 84
    expressao_declaracao <no> (63)
        on left: 32 33
        on right: 34
    tipos_expressao <no> (64)
        on left: 34 35 36 37 38
        on right: 27 74 75 76 77 78 79 80
    valores <no> (65)
        on left: 39 40 41
        on right: 43
    expressao_principal <no> (66)
        on left: 42 43 44 45 46
        on right: 69 70 71
    expressao_atribuicao <no> (67)
        on left: 47 48
        on right: 21 30 31 48 72 73 76 77 79 80
    expressao_relacional <no> (68)
        on left: 49 50 51
        on right: 47 50 51
    expressao_logica <no> (69)
        on left: 52 53 54 55
        on right: 49 50 51 53 54 55
    expressao_aritmetica <no> (70)
        on left: 56 57 58 59 60
        on right: 52 53 54 55 57 58 59 60
    expressao_conjunto <no> (71)
        on left: 61 62 63 64
        on right: 56 57 58 59 60 62 63 64
    expressao_io <no> (72)
        on left: 65 66 67 68
        on right: 61 66 67 68
    expressao_chamada <no> (73)
        on left: 69 70 71
        on right: 48 65
    expressao_lista_param <no> (74)
        on left: 72 73
        on right: 71 73
    expressao_decisao <no> (75)
        on left: 74 75 76 77
        on right: 35
    expressao_iteracao <no> (76)
        on left: 78 79 80
        on right: 38
    expressao_composta <no> (77)
        on left: 81 82
        on right: 17 36
    expressao_return <no> (78)
        on left: 83 84
        on right: 37


State 0

    0 $accept: • programa $end

    TIPO_ELEM   shift, and go to state 1
    TIPO_SET    shift, and go to state 2
    TIPO_INT    shift, and go to state 3
    TIPO_FLOAT  shift, and go to state 4

    programa              go to state 5
    declaracao_parametro  go to state 6
    def_declaracao_tipo   go to state 7
    declaracao_func       go to state 8
    declaracao            go to state 9
    declaracao_var        go to state 10


State 1

   15 def_declaracao_tipo: TIPO_ELEM •

    TOKEN_ID         reduce using rule 15 (def_declaracao_tipo)
    CHAVE_E          reduce using rule 15 (def_declaracao_tipo)
    PONTO_E_VIRGULA  reduce using rule 15 (def_declaracao_tipo)


State 2

   16 def_declaracao_tipo: TIPO_SET •

    TOKEN_ID         reduce using rule 16 (def_declaracao_tipo)
    CHAVE_E          reduce using rule 16 (def_declaracao_tipo)
    PONTO_E_VIRGULA  reduce using rule 16 (def_declaracao_tipo)


State 3

   13 def_declaracao_tipo: TIPO_INT •

    TOKEN_ID         reduce using rule 13 (def_declaracao_tipo)
    CHAVE_E          reduce using rule 13 (def_declaracao_tipo)
    PONTO_E_VIRGULA  reduce using rule 13 (def_declaracao_tipo)


State 4

   14 def_declaracao_tipo: TIPO_FLOAT •

    TOKEN_ID         reduce using rule 14 (def_declaracao_tipo)
    CHAVE_E          reduce using rule 14 (def_declaracao_tipo)
    PONTO_E_VIRGULA  reduce using rule 14 (def_declaracao_tipo)


State 5

    0 $accept: programa • $end
    2 programa: programa • declaracao

    $end        shift, and go to state 11
    TIPO_ELEM   shift, and go to state 1
    TIPO_SET    shift, and go to state 2
    TIPO_INT    shift, and go to state 3
    TIPO_FLOAT  shift, and go to state 4

    declaracao_parametro  go to state 6
    def_declaracao_tipo   go to state 7
    declaracao_func       go to state 8
    declaracao            go to state 12
    declaracao_var        go to state 10


State 6

   17 declaracao_func: declaracao_parametro • expressao_composta

    CHAVE_E  shift, and go to state 13

    expressao_composta  go to state 14


State 7

    5 declaracao_parametro: def_declaracao_tipo • def_declaracao
    6                     | def_declaracao_tipo •
   24 declaracao_var: def_declaracao_tipo • PONTO_E_VIRGULA
   25               | def_declaracao_tipo • lista_inicializar_atrib PONTO_E_VIRGULA

    TOKEN_ID         shift, and go to state 15
    PONTO_E_VIRGULA  shift, and go to state 16

    CHAVE_E  reduce using rule 6 (declaracao_parametro)

    def_declaracao           go to state 17
    inicializar_atrib        go to state 18
    lista_inicializar_atrib  go to state 19


State 8

   18 declaracao: declaracao_func •

    $end        reduce using rule 18 (declaracao)
    TIPO_ELEM   reduce using rule 18 (declaracao)
    TIPO_SET    reduce using rule 18 (declaracao)
    TIPO_INT    reduce using rule 18 (declaracao)
    TIPO_FLOAT  reduce using rule 18 (declaracao)


State 9

    1 programa: declaracao •

    $end        reduce using rule 1 (programa)
    TIPO_ELEM   reduce using rule 1 (programa)
    TIPO_SET    reduce using rule 1 (programa)
    TIPO_INT    reduce using rule 1 (programa)
    TIPO_FLOAT  reduce using rule 1 (programa)


State 10

   19 declaracao: declaracao_var •

    $end        reduce using rule 19 (declaracao)
    TIPO_ELEM   reduce using rule 19 (declaracao)
    TIPO_SET    reduce using rule 19 (declaracao)
    TIPO_INT    reduce using rule 19 (declaracao)
    TIPO_FLOAT  reduce using rule 19 (declaracao)


State 11

    0 $accept: programa $end •

    $default  accept


State 12

    2 programa: programa declaracao •

    $end        reduce using rule 2 (programa)
    TIPO_ELEM   reduce using rule 2 (programa)
    TIPO_SET    reduce using rule 2 (programa)
    TIPO_INT    reduce using rule 2 (programa)
    TIPO_FLOAT  reduce using rule 2 (programa)


State 13

   81 expressao_composta: CHAVE_E • CHAVE_D
   82                   | CHAVE_E • lista_itens_bloco CHAVE_D

    TOKEN_INTEIRO          shift, and go to state 20
    TOKEN_EMPTY            shift, and go to state 21
    TOKEN_PONTO_FLUTUANTE  shift, and go to state 22
    CONJUNTO_ADD           shift, and go to state 23
    CONJUNTO_REMOVE        shift, and go to state 24
    CONJUNTO_EXISTS        shift, and go to state 25
    TOKEN_ID               shift, and go to state 26
    ASPAS_SIMPLES          shift, and go to state 27
    ASPAS_DUPLAS           shift, and go to state 28
    CHAVE_E                shift, and go to state 175
    CHAVE_D                shift, and go to state 29
    COMANDO_FOR            shift, and go to state 30
    COMANDO_FORALL         shift, and go to state 31
    COMANDO_READ           shift, and go to state 32
    COMANDO_WRITE          shift, and go to state 33
    COMANDO_WRITELN        shift, and go to state 34
    TIPO_ELEM              shift, and go to state 176
    COMANDO_IF             shift, and go to state 35
    PARENTESE_E            shift, and go to state 36
    PONTO_E_VIRGULA        shift, and go to state 37
    RETURN                 shift, and go to state 38
    TIPO_SET               shift, and go to state 177
    TIPO_INT               shift, and go to state 178
    TIPO_FLOAT             shift, and go to state 179

    def_declaracao_tipo   go to state 39
    declaracao_var        go to state 40
    item_bloco            go to state 41
    lista_itens_bloco     go to state 42
    expressao             go to state 43
    expressao_declaracao  go to state 44
    tipos_expressao       go to state 45
    valores               go to state 46
    expressao_principal   go to state 47
    expressao_atribuicao  go to state 48
    expressao_relacional  go to state 49
    expressao_logica      go to state 50
    expressao_aritmetica  go to state 51
    expressao_conjunto    go to state 52
    expressao_io          go to state 53
    expressao_chamada     go to state 54
    expressao_decisao     go to state 55
    expressao_iteracao    go to state 56
    expressao_composta    go to state 57
    expressao_return      go to state 58


State 14

   17 declaracao_func: declaracao_parametro expressao_composta •

    $end        reduce using rule 17 (declaracao_func)
    TIPO_ELEM   reduce using rule 17 (declaracao_func)
    TIPO_SET    reduce using rule 17 (declaracao_func)
    TIPO_INT    reduce using rule 17 (declaracao_func)
    TIPO_FLOAT  reduce using rule 17 (declaracao_func)


State 15

    9 def_declaracao: TOKEN_ID •

    ATRIBUICAO       reduce using rule 9 (def_declaracao)
    CHAVE_E          reduce using rule 9 (def_declaracao)
    PARENTESE_E      reduce using rule 9 (def_declaracao)
    PONTO_E_VIRGULA  reduce using rule 9 (def_declaracao)
    VIRGULA          reduce using rule 9 (def_declaracao)


State 16

   24 declaracao_var: def_declaracao_tipo PONTO_E_VIRGULA •

    $end        reduce using rule 24 (declaracao_var)
    TIPO_ELEM   reduce using rule 24 (declaracao_var)
    TIPO_SET    reduce using rule 24 (declaracao_var)
    TIPO_INT    reduce using rule 24 (declaracao_var)
    TIPO_FLOAT  reduce using rule 24 (declaracao_var)


State 17

    5 declaracao_parametro: def_declaracao_tipo def_declaracao •
   10 def_declaracao: def_declaracao • PARENTESE_E PARENTESE_D
   11               | def_declaracao • PARENTESE_E lista_tipo_parametro PARENTESE_D
   12               | def_declaracao • PARENTESE_E lista_identificadores PARENTESE_D
   20 inicializar_atrib: def_declaracao •
   21                  | def_declaracao • ATRIBUICAO expressao_atribuicao

    ATRIBUICAO   shift, and go to state 59
    PARENTESE_E  shift, and go to state 60

    CHAVE_E          reduce using rule 5 (declaracao_parametro)
    PONTO_E_VIRGULA  reduce using rule 20 (inicializar_atrib)
    VIRGULA          reduce using rule 20 (inicializar_atrib)


State 18

   22 lista_inicializar_atrib: inicializar_atrib •

    PONTO_E_VIRGULA  reduce using rule 22 (lista_inicializar_atrib)
    VIRGULA          reduce using rule 22 (lista_inicializar_atrib)


State 19

   23 lista_inicializar_atrib: lista_inicializar_atrib • VIRGULA inicializar_atrib
   25 declaracao_var: def_declaracao_tipo lista_inicializar_atrib • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 61
    VIRGULA          shift, and go to state 62


State 20

   39 valores: TOKEN_INTEIRO •

    OP_IGUALDADE      reduce using rule 39 (valores)
    OP_MAIOR_QUE      reduce using rule 39 (valores)
    OP_SOMA           reduce using rule 39 (valores)
    OP_SUBTRACAO      reduce using rule 39 (valores)
    ATRIBUICAO        reduce using rule 39 (valores)
    OP_COMPARACAO     reduce using rule 39 (valores)
    OP_DIVISAO        reduce using rule 39 (valores)
    OP_E              reduce using rule 39 (valores)
    OP_MULTIPLICACAO  reduce using rule 39 (valores)
    OP_NEGACAO        reduce using rule 39 (valores)
    PARENTESE_E       reduce using rule 39 (valores)
    PONTO_E_VIRGULA   reduce using rule 39 (valores)
    VIRGULA           reduce using rule 39 (valores)


State 21

   41 valores: TOKEN_EMPTY •

    OP_IGUALDADE      reduce using rule 41 (valores)
    OP_MAIOR_QUE      reduce using rule 41 (valores)
    OP_SOMA           reduce using rule 41 (valores)
    OP_SUBTRACAO      reduce using rule 41 (valores)
    ATRIBUICAO        reduce using rule 41 (valores)
    OP_COMPARACAO     reduce using rule 41 (valores)
    OP_DIVISAO        reduce using rule 41 (valores)
    OP_E              reduce using rule 41 (valores)
    OP_MULTIPLICACAO  reduce using rule 41 (valores)
    OP_NEGACAO        reduce using rule 41 (valores)
    PARENTESE_E       reduce using rule 41 (valores)
    PONTO_E_VIRGULA   reduce using rule 41 (valores)
    VIRGULA           reduce using rule 41 (valores)


State 22

   40 valores: TOKEN_PONTO_FLUTUANTE •

    OP_IGUALDADE      reduce using rule 40 (valores)
    OP_MAIOR_QUE      reduce using rule 40 (valores)
    OP_SOMA           reduce using rule 40 (valores)
    OP_SUBTRACAO      reduce using rule 40 (valores)
    ATRIBUICAO        reduce using rule 40 (valores)
    OP_COMPARACAO     reduce using rule 40 (valores)
    OP_DIVISAO        reduce using rule 40 (valores)
    OP_E              reduce using rule 40 (valores)
    OP_MULTIPLICACAO  reduce using rule 40 (valores)
    OP_NEGACAO        reduce using rule 40 (valores)
    PARENTESE_E       reduce using rule 40 (valores)
    PONTO_E_VIRGULA   reduce using rule 40 (valores)
    VIRGULA           reduce using rule 40 (valores)


State 23

   62 expressao_conjunto: CONJUNTO_ADD • PARENTESE_E expressao_conjunto CONJUNTO_IN expressao_conjunto PARENTESE_D

    PARENTESE_E  shift, and go to state 63


State 24

   63 expressao_conjunto: CONJUNTO_REMOVE • PARENTESE_E expressao_conjunto CONJUNTO_IN expressao_conjunto PARENTESE_D

    PARENTESE_E  shift, and go to state 64


State 25

   64 expressao_conjunto: CONJUNTO_EXISTS • PARENTESE_E expressao_conjunto CONJUNTO_IN expressao_conjunto PARENTESE_D

    PARENTESE_E  shift, and go to state 65


State 26

   42 expressao_principal: TOKEN_ID •

    OP_IGUALDADE      reduce using rule 42 (expressao_principal)
    OP_MAIOR_QUE      reduce using rule 42 (expressao_principal)
    OP_SOMA           reduce using rule 42 (expressao_principal)
    OP_SUBTRACAO      reduce using rule 42 (expressao_principal)
    ATRIBUICAO        reduce using rule 42 (expressao_principal)
    OP_COMPARACAO     reduce using rule 42 (expressao_principal)
    OP_DIVISAO        reduce using rule 42 (expressao_principal)
    OP_E              reduce using rule 42 (expressao_principal)
    OP_MULTIPLICACAO  reduce using rule 42 (expressao_principal)
    OP_NEGACAO        reduce using rule 42 (expressao_principal)
    PARENTESE_E       reduce using rule 42 (expressao_principal)
    PONTO_E_VIRGULA   reduce using rule 42 (expressao_principal)
    VIRGULA           reduce using rule 42 (expressao_principal)


State 27

   44 expressao_principal: ASPAS_SIMPLES • TOKEN_ID ASPAS_SIMPLES

    TOKEN_ID  shift, and go to state 66


State 28

   45 expressao_principal: ASPAS_DUPLAS • TOKEN_ID ASPAS_DUPLAS

    TOKEN_ID  shift, and go to state 67


State 29

   81 expressao_composta: CHAVE_E CHAVE_D •

    $end        reduce using rule 81 (expressao_composta)
    TIPO_ELEM   reduce using rule 81 (expressao_composta)
    TIPO_SET    reduce using rule 81 (expressao_composta)
    TIPO_INT    reduce using rule 81 (expressao_composta)
    TIPO_FLOAT  reduce using rule 81 (expressao_composta)


State 30

   78 expressao_iteracao: COMANDO_FOR • PARENTESE_E declaracao tipos_expressao tipos_expressao PARENTESE_D tipos_expressao
   79                   | COMANDO_FOR • PARENTESE_E expressao_atribuicao CONJUNTO_IN expressao_atribuicao PARENTESE_D tipos_expressao

    PARENTESE_E  shift, and go to state 68


State 31

   80 expressao_iteracao: COMANDO_FORALL • PARENTESE_E expressao_atribuicao CONJUNTO_IN expressao_atribuicao PARENTESE_D tipos_expressao

    PARENTESE_E  shift, and go to state 69


State 32

   68 expressao_io: COMANDO_READ • PARENTESE_E expressao_io PARENTESE_D

    PARENTESE_E  shift, and go to state 70


State 33

   67 expressao_io: COMANDO_WRITE • PARENTESE_E expressao_io PARENTESE_D

    PARENTESE_E  shift, and go to state 71


State 34

   66 expressao_io: COMANDO_WRITELN • PARENTESE_E expressao_io PARENTESE_D

    PARENTESE_E  shift, and go to state 72


State 35

   74 expressao_decisao: COMANDO_IF • PARENTESE_E expressao PARENTESE_D tipos_expressao COMANDO_ELSE tipos_expressao
   75                  | COMANDO_IF • PARENTESE_E expressao PARENTESE_D tipos_expressao
   76                  | COMANDO_IF • PARENTESE_E expressao_atribuicao CONJUNTO_IN expressao_atribuicao PARENTESE_D tipos_expressao COMANDO_ELSE tipos_expressao
   77                  | COMANDO_IF • PARENTESE_E expressao_atribuicao CONJUNTO_IN expressao_atribuicao PARENTESE_D tipos_expressao

    PARENTESE_E  shift, and go to state 73


State 36

   46 expressao_principal: PARENTESE_E • expressao PARENTESE_D

    TOKEN_INTEIRO          shift, and go to state 180
    TOKEN_EMPTY            shift, and go to state 181
    TOKEN_PONTO_FLUTUANTE  shift, and go to state 182
    CONJUNTO_ADD           shift, and go to state 183
    CONJUNTO_REMOVE        shift, and go to state 184
    CONJUNTO_EXISTS        shift, and go to state 185
    TOKEN_ID               shift, and go to state 186
    ASPAS_SIMPLES          shift, and go to state 187
    ASPAS_DUPLAS           shift, and go to state 188
    COMANDO_READ           shift, and go to state 189
    COMANDO_WRITE          shift, and go to state 190
    COMANDO_WRITELN        shift, and go to state 191
    PARENTESE_E            shift, and go to state 192

    expressao             go to state 74
    valores               go to state 193
    expressao_principal   go to state 194
    expressao_atribuicao  go to state 195
    expressao_relacional  go to state 196
    expressao_logica      go to state 197
    expressao_aritmetica  go to state 198
    expressao_conjunto    go to state 199
    expressao_io          go to state 200
    expressao_chamada     go to state 201


State 37

   32 expressao_declaracao: PONTO_E_VIRGULA •

    TOKEN_INTEIRO          reduce using rule 32 (expressao_declaracao)
    TOKEN_EMPTY            reduce using rule 32 (expressao_declaracao)
    TOKEN_PONTO_FLUTUANTE  reduce using rule 32 (expressao_declaracao)
    CONJUNTO_ADD           reduce using rule 32 (expressao_declaracao)
    CONJUNTO_REMOVE        reduce using rule 32 (expressao_declaracao)
    CONJUNTO_EXISTS        reduce using rule 32 (expressao_declaracao)
    TOKEN_ID               reduce using rule 32 (expressao_declaracao)
    ASPAS_SIMPLES          reduce using rule 32 (expressao_declaracao)
    ASPAS_DUPLAS           reduce using rule 32 (expressao_declaracao)
    CHAVE_E                reduce using rule 32 (expressao_declaracao)
    CHAVE_D                reduce using rule 32 (expressao_declaracao)
    COMANDO_FOR            reduce using rule 32 (expressao_declaracao)
    COMANDO_FORALL         reduce using rule 32 (expressao_declaracao)
    COMANDO_READ           reduce using rule 32 (expressao_declaracao)
    COMANDO_WRITE          reduce using rule 32 (expressao_declaracao)
    COMANDO_WRITELN        reduce using rule 32 (expressao_declaracao)
    TIPO_ELEM              reduce using rule 32 (expressao_declaracao)
    COMANDO_IF             reduce using rule 32 (expressao_declaracao)
    PARENTESE_E            reduce using rule 32 (expressao_declaracao)
    PONTO_E_VIRGULA        reduce using rule 32 (expressao_declaracao)
    RETURN                 reduce using rule 32 (expressao_declaracao)
    TIPO_SET               reduce using rule 32 (expressao_declaracao)
    TIPO_INT               reduce using rule 32 (expressao_declaracao)
    TIPO_FLOAT             reduce using rule 32 (expressao_declaracao)


State 38

   83 expressao_return: RETURN • PONTO_E_VIRGULA
   84                 | RETURN • expressao PONTO_E_VIRGULA

    TOKEN_INTEIRO          shift, and go to state 20
    TOKEN_EMPTY            shift, and go to state 21
    TOKEN_PONTO_FLUTUANTE  shift, and go to state 22
    CONJUNTO_ADD           shift, and go to state 23
    CONJUNTO_REMOVE        shift, and go to state 24
    CONJUNTO_EXISTS        shift, and go to state 25
    TOKEN_ID               shift, and go to state 26
    ASPAS_SIMPLES          shift, and go to state 27
    ASPAS_DUPLAS           shift, and go to state 28
    COMANDO_READ           shift, and go to state 32
    COMANDO_WRITE          shift, and go to state 33
    COMANDO_WRITELN        shift, and go to state 34
    PARENTESE_E            shift, and go to state 36
    PONTO_E_VIRGULA        shift, and go to state 75

    expressao             go to state 76
    valores               go to state 46
    expressao_principal   go to state 47
    expressao_atribuicao  go to state 48
    expressao_relacional  go to state 49
    expressao_logica      go to state 50
    expressao_aritmetica  go to state 51
    expressao_conjunto    go to state 52
    expressao_io          go to state 53
    expressao_chamada     go to state 54


State 39

   24 declaracao_var: def_declaracao_tipo • PONTO_E_VIRGULA
   25               | def_declaracao_tipo • lista_inicializar_atrib PONTO_E_VIRGULA

    TOKEN_ID         shift, and go to state 202
    PONTO_E_VIRGULA  shift, and go to state 203

    def_declaracao           go to state 77
    inicializar_atrib        go to state 18
    lista_inicializar_atrib  go to state 204


State 40

   26 item_bloco: declaracao_var •

    TOKEN_INTEIRO          reduce using rule 26 (item_bloco)
    TOKEN_EMPTY            reduce using rule 26 (item_bloco)
    TOKEN_PONTO_FLUTUANTE  reduce using rule 26 (item_bloco)
    CONJUNTO_ADD           reduce using rule 26 (item_bloco)
    CONJUNTO_REMOVE        reduce using rule 26 (item_bloco)
    CONJUNTO_EXISTS        reduce using rule 26 (item_bloco)
    TOKEN_ID               reduce using rule 26 (item_bloco)
    ASPAS_SIMPLES          reduce using rule 26 (item_bloco)
    ASPAS_DUPLAS           reduce using rule 26 (item_bloco)
    CHAVE_E                reduce using rule 26 (item_bloco)
    CHAVE_D                reduce using rule 26 (item_bloco)
    COMANDO_FOR            reduce using rule 26 (item_bloco)
    COMANDO_FORALL         reduce using rule 26 (item_bloco)
    COMANDO_READ           reduce using rule 26 (item_bloco)
    COMANDO_WRITE          reduce using rule 26 (item_bloco)
    COMANDO_WRITELN        reduce using rule 26 (item_bloco)
    TIPO_ELEM              reduce using rule 26 (item_bloco)
    COMANDO_IF             reduce using rule 26 (item_bloco)
    PARENTESE_E            reduce using rule 26 (item_bloco)
    PONTO_E_VIRGULA        reduce using rule 26 (item_bloco)
    RETURN                 reduce using rule 26 (item_bloco)
    TIPO_SET               reduce using rule 26 (item_bloco)
    TIPO_INT               reduce using rule 26 (item_bloco)
    TIPO_FLOAT             reduce using rule 26 (item_bloco)


State 41

   28 lista_itens_bloco: item_bloco •

    TOKEN_INTEIRO          reduce using rule 28 (lista_itens_bloco)
    TOKEN_EMPTY            reduce using rule 28 (lista_itens_bloco)
    TOKEN_PONTO_FLUTUANTE  reduce using rule 28 (lista_itens_bloco)
    CONJUNTO_ADD           reduce using rule 28 (lista_itens_bloco)
    CONJUNTO_REMOVE        reduce using rule 28 (lista_itens_bloco)
    CONJUNTO_EXISTS        reduce using rule 28 (lista_itens_bloco)
    TOKEN_ID               reduce using rule 28 (lista_itens_bloco)
    ASPAS_SIMPLES          reduce using rule 28 (lista_itens_bloco)
    ASPAS_DUPLAS           reduce using rule 28 (lista_itens_bloco)
    CHAVE_E                reduce using rule 28 (lista_itens_bloco)
    CHAVE_D                reduce using rule 28 (lista_itens_bloco)
    COMANDO_FOR            reduce using rule 28 (lista_itens_bloco)
    COMANDO_FORALL         reduce using rule 28 (lista_itens_bloco)
    COMANDO_READ           reduce using rule 28 (lista_itens_bloco)
    COMANDO_WRITE          reduce using rule 28 (lista_itens_bloco)
    COMANDO_WRITELN        reduce using rule 28 (lista_itens_bloco)
    TIPO_ELEM              reduce using rule 28 (lista_itens_bloco)
    COMANDO_IF             reduce using rule 28 (lista_itens_bloco)
    PARENTESE_E            reduce using rule 28 (lista_itens_bloco)
    PONTO_E_VIRGULA        reduce using rule 28 (lista_itens_bloco)
    RETURN                 reduce using rule 28 (lista_itens_bloco)
    TIPO_SET               reduce using rule 28 (lista_itens_bloco)
    TIPO_INT               reduce using rule 28 (lista_itens_bloco)
    TIPO_FLOAT             reduce using rule 28 (lista_itens_bloco)


State 42

   29 lista_itens_bloco: lista_itens_bloco • item_bloco
   82 expressao_composta: CHAVE_E lista_itens_bloco • CHAVE_D
